--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -26,7 +26,7 @@ jobs:
           go-version: ${{ matrix.go-version }}
 
       - name: Initial
-        run: go mod tidy
+        run: go init ${{ github.repository }}
 
       - name: Install dependencies
         run: go get .
