--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -29,7 +29,7 @@ jobs:
         run: go mod init ${{ github.repository }}
 
       - name: Install dependencies
-        run: go get .
+        run: go get . > hello.o
 
       - name: Building Go
         run: go build .
