--- a/.github/workflows/golang.yml
+++ b/.github/workflows/golang.yml
@@ -45,3 +45,9 @@ jobs:
         with:
           name: Go-TestResults-${{ matrix.go-version }}
           path: TestResults-${{ matrix.go-version }}.json
+
+    runs-on: self-hosted
+    steps:
+      - uses: AutoModality/action-clean@v1
+      - uses: actions/checkout@v2
+      - run: echo Hello World
